# holdingnuts

./: CMakeLists.txt  ChangeLog  README.md  Toolchain_Windows.cmake
branches/sdl-audio/doxygen/: CMakeLists.txt
branches/sdl-audio/src/: Config.h
branches/sdl-audio/src/client/: CMakeLists.txt  ChatBox.cpp  Seat.hpp  SeatImages.cpp  SettingsDialog.cpp  SettingsDialog.hpp  WMain.cpp  WMain.hpp  WTable.cpp  pclient.cpp
branches/sdl-audio/src/libpoker/: Card.cpp  GameDebug.hpp  HoleCards.cpp  Player.hpp
branches/sdl-audio/src/server/: game.cpp  game.hpp  pserver.cpp
branches/sdl-audio/src/system/: Logger.c  Network.h  SysAccess.c  SysAccess.h  Tokenizer.hpp
cmake/: FindSQLITE3.cmake
docs/: algorithm.txt  concept_notes.txt  holdingnuts-server.6  holdingnuts.6  license_stub.txt  protocol_spec.txt  temp.txt
doxygen/: CMakeLists.txt  Doxyfile.in
master/corporate_design/: holdingnuts_logo.ai  holdingnuts_logo_small.ai  holdingnuts_logo_wide.ai
master/game/: table_design.psd
master/game/deck/: compose_cards.sh
master/misc/: project_concept.mm
src/: CMakeLists.txt  Config.h  Debug.h  Platform.h  Protocol.h  Version.h
src/client/: AboutDialog.cpp  AboutDialog.hpp  Audio.c  Audio.h  CMakeLists.txt  ChatBox.cpp  ChatBox.hpp  Chip.cpp  Chip.hpp  ChipStack.cpp  ChipStack.hpp  ChipStake.cpp  ChipStake.hpp  CreateGameDialog.cpp  CreateGameDialog.hpp  DealerButton.cpp  DealerButton.hpp  EditableSlider.cpp  EditableSlider.hpp  FirstStartDialog.cpp  FirstStartDialog.hpp  GameListSortFilterProxyModel.cpp  GameListSortFilterProxyModel.hpp  GameListTableModel.cpp  GameListTableModel.hpp  Jeton.cpp  Jeton.hpp  PlayerListSortFilterProxyModel.cpp  PlayerListSortFilterProxyModel.hpp  PlayerListTableModel.cpp  PlayerListTableModel.hpp  Seat.cpp  Seat.hpp  SeatImages.cpp  SeatImages.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StringListModel.cpp  StringListModel.hpp  TimeOut.cpp  (+13 more)
src/client/translations/: hn_de.ts  hn_fi.ts  hn_fr.ts  hn_it.ts  hn_ja.ts  hn_nl.ts  hn_ro.ts  hn_ru.ts
src/libpoker/: CMakeLists.txt  Card.cpp  Card.hpp  CommunityCards.cpp  CommunityCards.hpp  Deck.cpp  Deck.hpp  GameController.cpp  GameController.hpp  GameDebug.cpp  GameDebug.hpp  GameLogic.cpp  GameLogic.hpp  HoleCards.cpp  HoleCards.hpp  Player.cpp  Player.hpp  Table.cpp  Table.hpp
src/network/: Network.c  Network.h
src/server/: CMakeLists.txt  GameController.cpp  GameController.hpp  Table.cpp  Table.hpp  game.cpp  game.hpp  pserver.cpp  ranking.cpp  ranking.hpp  server_variables.hpp
src/system/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Database.cpp  Database.hpp  Logger.c  Logger.h  Network.c  Network.h  SysAccess.c  SysAccess.h  Tokenizer.cpp  Tokenizer.hpp
src/test/: CMakeLists.txt  TestCase.cpp  TestCase.hpp  dbtest.cpp  gc_test.cpp  gnutls_client_anon.c  pclient_t.cpp  simulator.cpp  system.cpp  test.cpp
tags/release-0.0.2-rc2/: CMakeLists.txt
tags/release-0.0.2-rc2/src/: Debug.h
tags/release-0.0.2-rc2/src/client/: CMakeLists.txt  EditableSlider.cpp  GameListTableModel.cpp  Seat.cpp  SettingsDialog.cpp  SettingsDialog.hpp  WMain.cpp  WTable.hpp  client_variables.hpp
tags/release-0.0.2-rc2/src/server/: Table.cpp  pserver.rc
tags/release-0.0.2-rc2/src/system/: Tokenizer.cpp
tags/release-0.0.2/doxygen/: CMakeLists.txt
tags/release-0.0.2/src/client/: AboutDialog.cpp  Audio.c  ChatBox.cpp  CreateGameDialog.cpp  CreateGameDialog.hpp  DealerButton.cpp  PlayerListTableModel.hpp  TimeOut.hpp  WMain.hpp  pclient.qrc
tags/release-0.0.2/src/system/: CMakeLists.txt  ConfigParser.hpp
tags/test1/src/: Config.h
tags/test1/src/client/: pclient_t.cpp
tags/test1/src/libpoker/: Deck.cpp  (+4 more)
tags/test10/docs/: protocol_spec.txt
tags/test11/: CMakeLists.txt
tags/test11/src/: Config.h
tags/test12/: distclean.sh
tags/test12/docs/: protocol_spec.txt
tags/test12/src/: Config.h
tags/test2/docs/: Poker.mm
tags/test2/src/: CMakeLists.txt  Debug.h  Platform.h
tags/test2/src/server/: CMakeLists.txt
tags/test3/docs/: client_flowchart.flw  protocol_spec.txt
tags/test4/src/: Config.h  Debug.h
tags/test4/src/client/: CMakeLists.txt  pclient_t.cpp
tags/test5/: build_windows.sh
tags/test5/docs/: ROADMAP  concept_notes.txt
tags/test5/src/: CMakeLists.txt
tags/test6/docs/: concept_notes.txt
tags/test6/src/: Platform.h
tags/test6/src/server/: CMakeLists.txt  game.cpp
tags/test7/docs/: license_stub.txt
tags/test7/src/: Config.h
tags/test9/docs/: Poker.mm  protocol_spec.txt
tags/test9/src/: Debug.h
trunk/: CMakeLists.txt  distclean.sh
trunk/data/gfx/table/: Thumbs.db
trunk/docs/: algorithm.txt  concept_notes.txt  protocol_spec.txt
trunk/doxygen/: CMakeLists.txt
trunk/src/: CMakeLists.txt  Config.h  Debug.h  Platform.h  Protocol.h  Version.h
trunk/src/client/: AboutDialog.cpp  Audio.c  CMakeLists.txt  ChatBox.cpp  ChatBox.hpp  CreateGameDialog.cpp  CreateGameDialog.hpp  DealerButton.cpp  DealerButton.hpp  EditableSlider.cpp  EditableSlider.hpp  GameListSortFilterProxyModel.cpp  GameListTableModel.cpp  GameListTableModel.hpp  PlayerListTableModel.cpp  PlayerListTableModel.hpp  Seat.cpp  Seat.hpp  SeatImages.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StringListModel.cpp  TimeOut.cpp  TimeOut.hpp  WMain.cpp  WMain.hpp  WTable.cpp  WTable.hpp  client_variables.hpp  pclient.cpp  pclient.hpp  pclient.qrc  pclient.rc  pclient_t.cpp  pclient_t.rc
trunk/src/client/translations/: hn_de.ts
trunk/src/libpoker/: CMakeLists.txt  Card.cpp  CommunityCards.cpp  CommunityCards.hpp  Deck.cpp  GameController.cpp  GameController.hpp  GameDebug.cpp  GameDebug.hpp  GameLogic.cpp  GameLogic.hpp  HoleCards.cpp  Player.cpp  Player.hpp  Table.cpp
trunk/src/network/: CMakeLists.txt  Network.h
trunk/src/server/: CMakeLists.txt  GameController.cpp  GameController.hpp  Table.cpp  Table.hpp  game.cpp  game.hpp  pserver.cpp  server_variables.hpp
trunk/src/system/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Logger.h  SysAccess.c  SysAccess.h  Tokenizer.cpp  Tokenizer.hpp
trunk/src/test/: CMakeLists.txt  pclient_t.cpp  simulator.cpp  system.cpp  test.cpp
(+82 files in other folders)
